# kger

./: .gitignore  CMakeLists.txt  EntityModeller.cpp  EntityModeller.h  GraphDataset.cpp  GraphDataset.h  README.md  WORKSPACE  graph.cpp  graph.h  kger.cpp  main.cpp  node.h  nodebuilder.cpp  nodebuilder.h  noderunner.cpp  owlparser.cpp  owlparser.h  random_walker.cpp  random_walker.h  relation_parser.cpp  relation_parser.h  test_graph.cpp  testtorch.cpp  text_extractor.cpp  unique_id.cpp  unique_id.h  vocabulary.cpp  vocabulary.h
.clwb/: .bazelproject
app/: CMakeLists.txt  noderunner.cpp  wiki_to_graph.cpp
cpp/: BUILD.bazel  graph_io.cpp  graph_io.h  kger.cpp  node.cpp  node.h  unique_id.cpp  unique_id.h
data/: instance_types_en_10k.ttl  ontology.owl
libs/: CMakeLists.txt
libs/graph/: CMakeLists.txt  graph_io.cpp  graph_io.proto  hex_ne_test.cpp  hex_node_visitor.cpp  hex_node_visitor.h  node.cpp  nodebuilder.cpp  owlparser.cpp  owlparser.h  unique_id.cpp
libs/graph/include/graph/: graph_io.h  node.h  nodebuilder.h  unique_id.h
libs/hex/: CMakeLists.txt  hex.cpp  hex_test.cpp  hex_utils.h
libs/hex/include/hex/: hex.h
libs/models/: CMakeLists.txt  EntityModeller.cpp  EntityModeller.h  GraphDataset.cpp  GraphDataset.h  model.cpp  trainer.cpp
libs/models/include/models/: model.h  trainer.h
libs/vocabulary/: CMakeLists.txt  vocabulary.cpp
libs/vocabulary/include/vocabulary/: vocabulary.h
libs/wikiparser/: CMakeLists.txt  relation_parser.cpp  test_rp.cpp
libs/wikiparser/include/wikiparser/: relation_parser.h
proto/: BUILD.bazel
